# onepdd

./: LICENSE  README.md  pyproject.toml
onepdd/: app.py  config.py  exc.py  puzzles.py  repo.py  storage.py  tickets.py  util.py  vcs.py
onepdd/hooks/: gitea.py  github.py
templates/: gitea_tickets_body.txt
tests/: conftest.py  test_puzzles.py  test_repo.py  test_tickets.py
